[package]
name = "test-with-tokio"
version = "0.3.0"
edition = "2021"
rust-version = "1.63"
license = "MIT"
readme = "README.md"
description = "attribute macro to apply guards to tests using tokio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-with-tokio-macros = { version = "0.2.0", path = "test-with-tokio-macros" }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["rt", "time"] }
async-std = "1.12.0"