[package]
name = "test-with-tokio-macros"
version = "0.3.1"
edition = "2021"
rust-version = "1.63"
license = "MIT"
description = "proc macro for test-with-tokio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.56", features = ["full", "visit"] }
